feat: create endpoint to get the authenticated user
